2005-05-10 Aladair Allan <aa@astro.ex.ac.uk>

        * bin/ogle_fetch.pl: Now correctly parses KDH's web pages and retrieves
          a list of targets, then queues thes up with the user_agent using the
          new_observation() method.
          
        * eSTAR/Util.pm: Refactored fudge_message into the utility class along
          with modifications to handle unquoted host name and port number.
          
        * bin/node_agent.pl: Moved fudge_message to Util.pm and modified to
          try and get rid of non-quoted string in IntelligentAgent tag as they
          don't parse using XML::Parser
          
        * eSTAR/NA/Handler.pm: Ditto for the handler class...
        
        * Fixed a bunch of fairly hideous bugs. 
        
        * bin/query_agent.pl: To go along with configure_agent.pl to allow us
          to get back values as well as set them in the agent code while it is
          still running.
          
        * Need to rework the way returned messages are handled bu the UA/Handler
          at the moment this doesn't work very well...      
        
2005-05-09 Aladair Allan <aa@astro.ex.ac.uk>

        * eSTAR/UA/Algorithim/ExoPlanetMonitor.pm: Added, simple copy of
          the SingleExposure algorithim block for now. Need to look into the
          way we generate Automatic followup IDs and how we associate eSTAR
          unique IDs and the OGLE ID. Also need a garbage collection thread
          for the user agent (in a similar fashion to the incomplete one in
          the jach_agent).
          
        * bin/ogle_fetch.pl: Basic script to grab and parse KDH's observing
          priorities web pages.  

2005-05-06 Aladair Allan <aa@astro.ex.ac.uk>

        * bin/node_agent.pl: Fixed buffer overflow error in the TCP/IP server
          of the node agent.
          
        * eSTAR/UA/Handler.pm: Fixed time constraint on teh construction of
          and submission of score and observation request messages  
