@@ -1,3 +1,9 @@
+2005-06-02 Aladair Allan <aa@astro.ex.ac.uk>
+
+        * bin/correlation_daemon.pl: Stub of the correlation daemon that will
+	  be doing the cross-correlation between the intra- and inter-frame
+	  comparisons for the WFCAM survey agent.
+	   
 2005-05-10 Aladair Allan <aa@astro.ex.ac.uk>
 
         * bin/ogle_fetch.pl: Now correctly parses KDH's web pages and retrieves
